# grpc-web-with-bazel

./: .bazelrc  .dockerignore  .eslintignore  .eslintrc.js  .gitignore  BUILD.bazel  Makefile  WORKSPACE  docker-compose.yml  package.json  tsconfig.json
proto/: BUILD.bazel
proto/greeter/: BUILD.bazel  service.proto
proto/user/: BUILD.bazel  user.proto
tools/: copy_proto_using_google_protobuf_from_release.sh
tools/bazel/: copy_files.bzl  defs.bzl  nodejs_dependencies.bzl
tools/bazel/google_protobuf/: ts_proto_library.bzl
tools/bazel/protobufjs/: BUILD.bazel  package.json  ts_proto_library.bzl
tools/bazel/rollup/: BUILD.bazel  package.json  rollup_bundle.bzl
tools/bazel/webpack/: BUILD.bazel  package.json  webpack.config.js  webpack_bundle.bzl
