load("@build_bazel_rules_nodejs//:defs.bzl", "nodejs_binary")

package(default_visibility = ["//visibility:public"])

nodejs_binary(
    name = "rollup",
    data = [
        "@nodejs_rollup_deps//is-builtin-module",
        "@nodejs_rollup_deps//rollup",
        "@nodejs_rollup_deps//rollup-plugin-amd",
        "@nodejs_rollup_deps//rollup-plugin-commonjs",
        "@nodejs_rollup_deps//rollup-plugin-json",
        "@nodejs_rollup_deps//rollup-plugin-replace",
        "@nodejs_rollup_deps//rollup-plugin-node-resolve",
        "@nodejs_rollup_deps//rollup-plugin-sourcemaps",
    ],
    entry_point = "rollup/bin/rollup",
    install_source_map_support = False,
)
